Set a nice app name on Linux